--- a/cart/index.html
+++ b/cart/index.html
@@ -59,10 +59,10 @@
         <h2>My Cart</h2>
 
         <ul class="product-list">
-          <!-- <li class="cart-card divider">
+          <li class="cart-card divider">
             <a href="product_pages/marmot-ajax-3.html" class="cart-card__image">
               <img
-                src="images/tents/marmot-ajax-tent-3-person-3-season-in-pale-pumpkin-terracotta~p~880rr_01~320.jpg"
+                src="/images/marmot-ajax-tent-3-person-3-season-in-pale-pumpkin-terracotta~p~880rr_01~320.jpg"
                 alt="Marmot Ajax tent"
               />
             </a>
@@ -76,7 +76,7 @@
           <li class="cart-card divider">
             <a href="product_pages/marmot-ajax-3.html" class="cart-card__image">
               <img
-                src="images/tents/the-north-face-talus-tent-4-person-3-season-in-golden-oak-saffron-yellow~p~985rf_01~320.jpg"
+                src="/images/cedar-ridge-rimrock-tent-2-person-3-season-in-rust-clay~p~344yj_01~320.jpg"
                 alt="Talus Tent - 4-Person, 3-Season"
               />
             </a>
@@ -88,7 +88,7 @@
             <p class="cart-card__color">Golden Oak/Saffron Yellow</p>
             <p class="cart-card__quantity">qty: 1</p>
             <p class="cart-card__price">$199.99</p>
-          </li> -->
+          </li> 
         </ul>
       </section>
     </main>
