--- a/Finalproject/index.html
+++ b/Finalproject/index.html
@@ -7,7 +7,7 @@
     <link
         href="https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,100;0,300;0,400;0,700;0,900;1,100;1,300;1,400;1,700;1,900&display=swap"
         rel="stylesheet">
-    <link rel="stylesheet" href="/stylez/app.css">
+    <link rel="stylesheet" href="/styles/app.css">
     <title>Nike Store</title>
 </head>
 
