--- a/Finalproject/index.html
+++ b/Finalproject/index.html
@@ -240,7 +240,7 @@
             </div>
         </div>
     </footer>
-    <script src="/appscript/app.js"></script>
+    <script src="/js/app.js"></script>
 </body>
 
 </html>
